# cabal-edit

./: .gitignore  LICENSE  README.md  auditCabal-edit.odt  cabal-edit.cabal  cabal_edit_blueprint.md  debug_roundtrip.hs  todo.odt  unicode_test.cabal.bak
.github/workflows/: ci.yml
app/: Main.hs
bench/: Benchmark.hs
docs/: API.md  CONTRIBUTING.md  TUTORIAL.md
src-public/Distribution/: CabalEdit.hs
src/Business/: Add.hs  Flag.hs  Hpack.hs  List.hs  Remove.hs  SetVersion.hs  Sync.hs  Upgrade.hs  Validation.hs
src/Core/: DependencyResolver.hs  HpackEditor.hs  Parser.hs  ProjectContext.hs  ProjectEditor.hs  Safety.hs  Serializer.hs  Solver.hs  Types.hs
src/Core/AST/: Editor.hs  Parser.hs  Serializer.hs  Types.hs
src/Utils/: Config.hs  Diff.hs  Error.hs  Formatting.hs  Logging.hs  Terminal.hs
temp_debug/: test.cabal
test/: Spec.hs
test/Business/: AddOutlierSpec.hs  AddSpec.hs  CommonStanzaSpec.hs  DebugAddSpec.hs  FlagOutlierSpec.hs  FlagSpec.hs  ListSpec.hs  MixinSpec.hs  RemoveSpec.hs  SetVersionOutlierSpec.hs  SetVersionSpec.hs  SourceDepSpec.hs  SubLibrarySpec.hs  SyncSpec.hs  UpgradeSpec.hs  ValidationSpec.hs
test/Core/: CRLFSpec.hs  DependencyResolverSpec.hs  ParserSpec.hs  ProjectContextSpec.hs  SafetySpec.hs  SerializerComplexSpec.hs  SerializerOutlierSpec.hs  SerializerSpec.hs  SolverSpec.hs  TrailingCommaSpec.hs  UnicodeSpec.hs
test/Core/AST/: BracesSpec.hs  EditorOutlierSpec.hs  EditorSpec.hs  RoundtripSpec.hs
test/Golden/: RoundtripSpec.hs
test/Golden/fixtures/: aeson.cabal  common-stanzas.cabal  complex.cabal  lens.cabal  pandoc.cabal
test/Integration/: EndToEndSpec.hs  HpackSpec.hs  WorkspaceSpec.hs
test/Utils/: ConfigSpec.hs  DiffSpec.hs
