cabal-version: 3.0
name:          aeson
version:       2.2.3.0
license:       BSD-3-Clause
synopsis:      Fast JSON parsing and encoding
category:      Text, JSON

library
  exposed-modules:    Data.Aeson
  build-depends:
    base >= 4.14 && < 5
    , bytestring >= 0.10.12 && < 0.13
    , containers >= 0.6.2 && < 0.8
    , deepseq >= 1.4.4 && < 1.6
    , text >= 1.2.3 && < 2.2
  hs-source-dirs:     src
  default-language:   Haskell2010
