cabal-version: 2.4
name:          lens
version:       5.3.2
license:       BSD-3-Clause
author:        Edward Kmett
maintainer:    Edward Kmett <ekmett@gmail.com>
category:      Data, Lenses, Generics
synopsis:      Lenses, Folds and Traversals
description:
  This package provides lenses, folds and traversals for Haskell.

library
  exposed-modules:
    Control.Lens
    Control.Lens.At
  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.5.11 && < 0.8,
    mtl >= 2.2.2 && < 2.4,
    text >= 1.2.3 && < 2.2
  hs-source-dirs: src
  default-language: Haskell2010
