cabal-version: 2.4
name:          pandoc
version:       3.1.11.1
license:       GPL-2.0-or-later
synopsis:      Conversion between markup formats
category:      Text

common common-options
  build-depends: base >= 4.14 && < 5
  default-language: Haskell2010

library
  import: common-options
  exposed-modules: Text.Pandoc
  build-depends:
    aeson >= 2.1 && < 2.3,
    bytestring >= 0.10 && < 0.13,
    containers >= 0.6 && < 0.8,
    text >= 1.2 && < 2.2
  hs-source-dirs: src
